syntax = "proto3";

package jarvisnetcore;

message RequestWant2Join {
    string nameid = 1;
    string nodeAddr = 2;
}
  
message ReplyNodeInfo {
    string nameid = 1;
    string nodeAddr = 2;    
}

service JarvisNetCore {
    rpc want2Join (RequestWant2Join) returns (stream ReplyNodeInfo) {}
}